# build-twitter-api-clone-actix

./: Cargo.toml  README.md
final/twitter-api/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  dockerDeploy.sh
final/twitter-api/migrations/: 0001_core_tables.sql  0002_circle_tables.sql
final/twitter-api/src/: lib.rs
final/twitter-api/src/common/: app_state.rs
final/twitter-api/src/common/entities/base/: mod.rs
final/twitter-api/src/common/entities/messages/: model.rs  repo.rs
final/twitter-api/src/common/entities/profiles/: model.rs  repo.rs
final/twitter-api/src/common_tests/: actix_fixture.rs
final/twitter-api/src/routes/: output_id.rs
final/twitter-api/src/routes/errors/: error_utils.rs
final/twitter-api/src/routes/messages/: message_route.rs  model.rs
final/twitter-api/src/routes/profiles/: model.rs  profile_route.rs
final/twitter-api/tests/: mod.rs
final/twitter-api/tests/common/entities/messages/: repo_test.rs
final/twitter-api/tests/routes/messages/: message_route_test.rs
final/twitter-api/tests/routes/profiles/: profile_route_test.rs
section_1/finish/actix_arch/: Cargo.toml
section_1/finish/actix_arch/src/: main.rs
section_1/finish/error/: Cargo.toml
section_1/finish/error/src/: complex.rs  main.rs  simple.rs
section_1/finish/extractors_app_data/: Cargo.toml
section_1/finish/extractors_multipart/: Cargo.toml
section_1/finish/extractors_path_json/: Cargo.toml
section_1/finish/extractors_path_json/src/: main.rs
section_1/finish/handlers/: Cargo.toml
section_1/finish/handlers/src/: main.rs
section_1/finish/middleware/: Cargo.toml
section_1/finish/middleware/src/: main.rs  req_middleware.rs  req_res_middleware.rs
section_1/finish/responders/: Cargo.toml
section_1/finish/responders/src/: either_response.rs  httpresponse.rs  impl_response.rs  json_response.rs  main.rs  string_str.rs
section_1/finish/sqlx/: Cargo.toml  docker-compose.yml  dockerDeploy.sh  run-migration.sh
section_1/finish/sqlx/migrations/: 20230619172832_profile_table.sql  20230619173018_message_table.sql
section_1/finish/sqlx/src/: main.rs
section_1/start/actix_arch/: Cargo.toml
section_1/start/actix_arch/src/: main.rs  test.txt
section_1/start/error/: Cargo.toml
section_1/start/error/src/: main.rs
section_1/start/extractors_app_data/: Cargo.toml
section_1/start/extractors_app_data/src/: main.rs
section_1/start/extractors_path_json/: Cargo.toml
section_1/start/extractors_path_json/src/: main.rs
section_1/start/handlers/: Cargo.toml
section_1/start/handlers/src/: main.rs
section_1/start/middleware/: Cargo.toml
section_1/start/middleware/src/: main.rs
section_1/start/responders/: Cargo.toml
section_1/start/responders/src/: main.rs
section_1/start/sqlx/: Cargo.toml
section_2/finish/sqlx/: Cargo.toml
section_2/finish/sqlx/migrations/: 20230619172832_profile_table.sql
section_2/finish/sqlx/src/: main.rs
section_3/twitter-api/: Cargo.toml  Dockerfile  docker-compose.yml  dockerDeploy.sh
section_3/twitter-api/src/common/: app_state.rs
section_3/twitter-api/src/common/entities/base/: mod.rs
section_3/twitter-api/src/common/entities/circle_group/: model.rs  repo.rs
section_3/twitter-api/src/common/entities/messages/: model.rs  repo.rs
section_3/twitter-api/src/common_tests/: actix_fixture.rs
section_3/twitter-api/src/routes/: output_id.rs
section_3/twitter-api/src/routes/profiles/: model.rs
section_3/twitter-api/tests/routes/messages/: message_route_test.rs
section_3/twitter-api/tests/routes/profiles/: profile_route_test.rs
twitter-api/: .prettierrc.toml  Cargo.toml
twitter-api/src/: main.rs
twitter-api/src/common/: app_state.rs
twitter-api/src/common/fs/: file_utils.rs
twitter-api/src/common_tests/: actix_fixture.rs  mod.rs
twitter-api/src/routes/errors/: error_utils.rs
twitter-api/tests/routes/messages/: message_route_test.rs
twitter-api/tests/routes/profiles/: profile_route_test.rs
twitter-api/tools/: pgcommands.txt
