[workspace]
members = [
    "final/twitter-api",
    "section_1/start/actix_arch",
    "section_1/finish/actix_arch",
    "section_1/start/extractors_app_data",
    "section_1/finish/extractors_app_data",
    "section_1/start/extractors_path_json",
    "section_1/finish/extractors_path_json",
    "section_1/start/responders",
    "section_1/finish/responders",
    "section_1/start/error",
    "section_1/finish/error",
    "section_1/start/handlers",
    "section_1/finish/handlers",
    "section_1/start/middleware",
    "section_1/finish/middleware",
    "section_1/finish/sqlx"
]