[package]
name = "finish_middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
derive_more = "0.99.17"
futures = "0.3.28"
futures-util = "0.3.28"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"