[package]
name = "start_extractors_path_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
chrono = { version = "0.4.24", features = ["serde"] }